force-app/main/default/objects/Work_Order_Form_Assembly_Variables__c/Work_Order_Form_Assembly_Variables__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>These are for variables to be passed in the work order buttons so that the report link in the response page on form assembly works</description>
    <label>Work Order Form Assembly Variables</label>
</CustomObject>