force-app/main/default/objects/Work_Order_Form_Assembly_Variables__c/fields/Report_ID__c.field-meta.xml
<CustomField>
    <fullName>Report_ID__c</fullName>
    <description>ID of the report taken back to in the form assembly notifications page. Appended to the URL fields within the work order buttons.</description>
    <inlineHelpText>ID of the report taken back to in the form assembly notifications page.</inlineHelpText>
    <label>Report ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>