force-app/main/default/objects/Work_Order_Form_Assembly_Variables__c/fields/SFDC_Classic_Report_Variable__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Classic_Report_Variable__c</fullName>
    <description>pv or fv, depending on the context.</description>
    <inlineHelpText>PV for Classic.</inlineHelpText>
    <label>SFDC Classic Report Variable</label>
    <length>2</length>
    <type>Text</type>
</CustomField>