force-app/main/default/objects/Work_Order_Form_Assembly_Variables__c/fields/SFDC_Classic_URL__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Classic_URL__c</fullName>
    <description>URL portion before the report. Needed to pass to formassembly in the custom button for work orders.</description>
    <inlineHelpText>What portion of the url needs to be sent over to form assembly to use as a variable field when linking back to the report when it is complete?</inlineHelpText>
    <label>SFDC Classic URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>