force-app/main/default/objects/Work_Order_Form_Assembly_Variables__c/fields/SFDC_Lightning_Report_Variable__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Lightning_Report_Variable__c</fullName>
    <description>PV or FV, depending on the context</description>
    <inlineHelpText>FV for lightning</inlineHelpText>
    <label>SFDC Lightning Report Variable</label>
    <length>2</length>
    <type>Text</type>
</CustomField>