force-app/main/default/objects/Work_Order_Form_Assembly_Variables__c/fields/SFDC_Lightning_URL__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Lightning_URL__c</fullName>
    <description>URL syntax to lead to a report in lightning.</description>
    <inlineHelpText>URL syntax to lead to a report in lightning.</inlineHelpText>
    <label>SFDC Lightning URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>