force-app/main/default/objects/Work_Order_Form_Assembly_Variables__c/fields/SFDC_Lightning_URL_Part_2__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Lightning_URL_Part_2__c</fullName>
    <description>Needed for after the report id in the url. should be appended in the custom link.</description>
    <inlineHelpText>Part in the lightning URL after the report id but before the variables</inlineHelpText>
    <label>SFDC Lightning URL Part 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>